fix: update router
